--- a/pdb/views/doctor.ejs
+++ b/pdb/views/doctor.ejs
@@ -1,16 +1,23 @@
-<h1>DOCTOR PAGE</h1>
-
-<h4>All views and needed methods for doctor is in this page.</h4>
+<h1>Doctor</h1>
 <link rel="stylesheet", href = "style.css">
 
+<h4>Views:</h4>
 
-  <form action="/doctor" method="POST">
+<p><a href="/officer/seeAppointments">See All Appointments</a></p>
+
+<p><a href="/officer/seeChronicalDiseases">See Chronical Diseases</a></p>
 
 
-  </form>
+<h4>Methods ADD:</h4>
 
-  <a href="/changeHealthStatus">Change Health Status</a>
-  <a href="/appointmentDone">Appointment Done</a>
-  <a href="/seeAllChronicalDiseases">See All Chronical Diseases</a>
+<p><a href="/officer/healthUpdate"> Updates Health Status</a></p>
 
-  <a href="/login">Return Login Page</a>
+<h4>Methods DELETE:</h4>
+
+<p><a href="/officer/appointmentDelete">Delete Appointment</a></p>
+
+
+
+<h4>Return:</h4>
+
+<p><a href="/">Home Page</a></p>
