--- a/pdb/views/index.ejs
+++ b/pdb/views/index.ejs
@@ -9,7 +9,9 @@
 <body>
   <h1>Welcome to the prison dmbs!</h1>
   <nav>
-    <p> <a href="/login">Login</a> </p>
+    <p> <a href="/loginOff">Login as Officer</a> </p>
+    <p> <a href="/loginDoc">Login as Doctor </a> </p>
+
     <p><a href="/about">About page</a> </p>
   </nav>
 </body>
