--- a/pdb/views/officer.ejs
+++ b/pdb/views/officer.ejs
@@ -1,1 +1,83 @@
+<h1>Officer</h1>
 <link rel="stylesheet", href = "style.css">
+
+<h4>Views:</h4>
+
+<p><a href="/officer/allPrisons">See All Prisons</a></p>
+
+<p><a href="/officer/doctorCapacity">Capacities of All Doctors</a></p>
+
+<p><a href="/officer/seeJailersWard">See Jailers Ward</a></p>
+
+<p><a href="/officer/remainingDays">Remaining Days of All Prisons</a></p>
+
+
+
+<h4>Methods ADD:</h4>
+
+<p><a href="/officer/prisonAdd">Add Prison</a></p>
+
+<p><a href="/officer/doctorAdd">Add Doctor</a></p>
+
+<p><a href="/officer/visitorAdd">Add Visitor</a></p>
+
+<p><a href="/officer/visitAdd">Add Visit</a></p>
+
+<p><a href="/officer/jailerAdd">Add Jailer</a></p>
+
+<p><a href="/officer/appAdd">Add Appointment</a></p>
+
+
+
+<h4>Methods DELETE:</h4>
+
+<p><a href="/officer/prisonDelete">Delete Prison</a></p>
+
+<p><a href="/officer/doctorDelete">Delete Doctor</a></p>
+
+<p><a href="/officer/visitorDelete">Delete Visitor</a></p>
+
+<p><a href="/officer/visitDelete">Delete Visit</a></p>
+
+<p><a href="/officer/jailerDelete">Delete Jailer</a></p>
+
+<p><a href="/officer/appDelete">Delete Appointment</a></p>
+
+
+
+<h4>Methods UPDATE:</h4>
+
+<p><a href="/officer/prisonUpdate">Update Prison</a></p>
+
+<p><a href="/officer/doctorDelete">Update Doctor</a></p>
+
+<p><a href="/officer/visitorUpdate">Update Visitor</a></p>
+
+<p><a href="/officer/visitUpdate">Update Visit</a></p>
+
+<p><a href="/officer/jailerUpdate">Update Jailer</a></p>
+
+<p><a href="/officer/appUpdate">Update Appointment</a></p>
+
+
+
+<h4>Methods SEARCH:</h4>
+
+<p><a href="/officer/prisonSearch">Search Prison</a></p>
+
+<p><a href="/officer/doctorSearch">Update Doctor</a></p>
+
+<p><a href="/officer/visitorSearch">Update Visitor</a></p>
+
+<p><a href="/officer/visitSearch">Update Visit</a></p>
+
+<p><a href="/officer/jailerSearch">Update Jailer</a></p>
+
+<p><a href="/officer/appSearch">Update Appointment</a></p>
+
+
+
+
+<h4>Return:</h4>
+
+<p><a href="/">Home Page</a></p>
