views added, and others

--- a/pdb/views/prisonAdd.ejs
+++ b/pdb/views/prisonAdd.ejs
@@ -32,8 +32,15 @@
 
 <p>
     <div>
-        <label for="bdate">Birth Date </label>
-        <input type="bdate" id="bdate" name="bdate" required>
+        <label for="birth_date">Birth Date </label>
+        <input type="birth_date" id="birth_date" name="birth_date" required>
+    </div>
+</p>
+
+<p>
+    <div>
+        <label for="country">Country </label>
+        <input type="country" id="country" name="country" required>
     </div>
 </p>
 
@@ -46,27 +53,14 @@
 
 <p>
     <div>
-        <label for="phone">Phone Number </label>
-        <input type="phone" id="phone" name="phone" required>
+        <label for="arrest_date"> Arrest Date </label>
+        <input type="arrest_date" id="arrest_date" name="arrest_date" required>
     </div>
 </p>
 
-<p>
-    <div>
-        <label for="adate"> Arrest Date </label>
-        <input type="adate" id="adate" name="adate" required>
-    </div>
-</p>
-
-<p>
-    <div>
-        <label for="rdate"> Release Date </label>
-        <input type="rdate" id="rdate" name="rdate" required>
-    </div>
-</p>
   
   <p><button type="submit">Submit</button></p>
 </form>
   <p>
-    <a href="/officer">Return Doctor Page</a>
+    <a href="/officer">Return Officer Page</a>
   </p>
